# ImunoEdge

./: .env.example  .gitignore  .gitmodules  README.md  STRESS_TEST.md  VERIFY_HARDENING.py  imunoedge.service  install.sh  pyproject.toml
.github/workflows/: ci.yml
logs/logs_57096849426/: 0_Code Quality (Ruff).txt  10_Shell Linting (ShellCheck).txt  1_Test on ubuntu-24.04.txt  2_Test on alpine-3.20.txt  3_Test on fedora-42.txt  4_Smoke Test (Python 3.12).txt  5_Test on archlinux.txt  6_Smoke Test (Python 3.11).txt  7_Security Scanning (Bandit).txt  8_Type Checking (Mypy).txt  9_Smoke Test (Python 3.13).txt
logs/logs_57096849426/Code Quality (Ruff)/: 11_Post Set up Python.txt  12_Post Check out code.txt  13_Complete job.txt  1_Set up job.txt  2_Check out code.txt  3_Set up Python.txt  4_Install ruff.txt  5_Run ruff check.txt  6_Run ruff format check.txt  system.txt
logs/logs_57096849426/Security Scanning (Bandit)/: 13_Post Set up Python.txt  14_Post Check out code.txt  15_Complete job.txt  1_Set up job.txt  2_Pull returntocorp_semgrep-agentv1.txt  3_Check out code.txt  4_Set up Python.txt  5_Install bandit.txt  6_Run bandit.txt  7_Run Semgrep.txt  system.txt
logs/logs_57096849426/Shell Linting (ShellCheck)/: 1_Set up job.txt  2_Check out code.txt  3_Run ShellCheck on install.sh.txt  6_Post Check out code.txt  7_Complete job.txt  system.txt
logs/logs_57096849426/Smoke Test (Python 3.11)/: 12_Post Check out code.txt  13_Complete job.txt  1_Set up job.txt  2_Check out code.txt  3_Set up Python 3.11.txt  4_Install dependencies.txt  system.txt
logs/logs_57096849426/Smoke Test (Python 3.12)/: 12_Post Check out code.txt  13_Complete job.txt  1_Set up job.txt  2_Check out code.txt  (+3 more)
logs/logs_57099307822/: 0_Test on archlinux.txt  10_Smoke Test (Python 3.11).txt  11_Type Checking (Mypy).txt  1_Test on fedora-42.txt  2_Smoke Test (Python 3.12).txt  3_Code Quality (Ruff).txt  4_Smoke Test (Python 3.14).txt  5_Smoke Test (Python 3.13).txt  6_Test on ubuntu-24.04.txt  7_Security Scanning (Bandit).txt  8_Shell Linting (ShellCheck).txt  9_Test on alpine-3.20.txt
scripts/: migrate_v1_to_v2.py
src/imunoedge/: __init__.py  main.py  sdk.py
tests/: test_migration.py
(+154 files in other folders)
