[project]
name = "imunoedge"
version = "0.1.0"
description = "ImunoEdge - IoT Runtime com Autocura sobre TaipanStack"
authors = [
    {name = "gabrielima7", email = "gabrielima.alu.lmb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = {text = "MIT"}
keywords = ["iot", "edge", "self-healing", "watchdog", "telemetry", "taipanstack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Internet of Things",
    "Typing :: Typed",
]
dependencies = [
    "psutil>=6.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0.0",
    "orjson>=3.9.0",
    "email-validator>=2.0.0",
    "result>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/gabrielima7/ImunoEdge"
Repository = "https://github.com/gabrielima7/ImunoEdge"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src", "TaipanStack/src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "TaipanStack/src"]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific
]
ignore = ["D203", "D212", "D213", "D416", "D417"]

[tool.ruff.lint.per-file-ignores]
"src/imunoedge/workers/*.py" = ["T201", "S311"]
"src/imunoedge/core/*.py" = ["S603", "S311", "D401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
plugins = ["pydantic.mypy"]
